# heresfilly.wtf

./: CNAME  index.html  parse.py
injector/: Cargo.toml  build.rs
injector/native/: shellcode.cpp  shellcode.h
injector/src/: gui.rs  inject.rs  main.rs  process.rs
injector/src/injector/: mod.rs  pe.rs  types.rs
science/: index.html
